updated font size

--- a/LatexManuscript/MBE/legacy.tex
+++ b/LatexManuscript/MBE/legacy.tex
@@ -421,7 +421,11 @@ We would also like to thank the members of the Gravel lab for their help with co
 \bibliography{Legacy}
 
 \clearpage
+
+
 \section{Supplementary Figures}
+\clearpage
+
 \extrafloats{100}
 
 \renewcommand{\thefigure}{S\arabic{figure}}
@@ -454,7 +458,7 @@ Removing individuals with average quality per mapped bases $Q$ below a threshold
 
 
 \begin{figure}[tbp]
-\includegraphics[width=11cm,keepaspectratio]{CutOffID_QUAL30_heatmap_v_AFR_nosingle.jpg}
+\includegraphics[width=7cm,keepaspectratio]{CutOffID_QUAL30_heatmap_v_AFR_nosingle.jpg}
 \caption{Comparing continental mutational signatures after removing $Q$-associated variants and after removing individuals with low $Q$.  
 The  *AC${\rightarrow}$*CC mutational signature in East Asian (EAS) Population remains despite removing individuals with average quality per mapped bases $Q$ below a threshold of 30.
 Points indicate significant mutation spectrum contrasts with $p <10^{-5}$}
@@ -642,11 +646,6 @@ Among the 6,307 variants associated with $Q$ in the GCAT model including all pop
 \caption{Site frequency spectrum plot comparing the frequency of $Q$-associated variants identified in publications, for individuals with $Q$ scores above and below 30. The black dashed lines indicates equal allele frequencies while the red dotted line for variants twice as frequent in individuals with $Q$ scores below 30. Each of the rsIDs of the variants are labelled for clarity.}  
 \label{Pub_30}
 \end{figure}
-
-
-
-
-
 
 
 \end{document}
